--- a/index.html
+++ b/index.html
@@ -1,31 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="canonical" href="https://sohaibmanah.netlify.app" />
-  <meta
-          name="description"
-          content="Sohaib Manah - DevOps Engineer and Full Stack Developer. Experienced in cloud infrastructure, CI/CD, Docker, Kubernetes, and web development, based in France and Morocco."
-  />
-  <meta
-          property="og:description"
-          content="Explore the portfolio of Sohaib Manah, a DevOps Engineer and Full Stack Developer skilled in cloud computing, CI/CD, and scalable applications."
-  />
-  <meta property="og:title" content="Sohaib Manah - DevOps & Full Stack Engineer" />
-  <meta property="og:url" content="https://sohaibmanah.netlify.app" />
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Sohaib Manah - Software Engineer & DevOps Specialist" />
-  <meta property="og:image" content="./src/assets/images/Hero/person.png" />
-  <meta
-          name="keywords"
-          content="Sohaib Manah, DevOps Engineer, Full Stack Developer, cloud infrastructure, CI/CD, Docker, Kubernetes, Azure, AWS, Java, Python, MERN, web developer, software engineer, Morocco, France, freelance developer"
-  />
-  <title>Sohaib Manah - DevOps & Full Stack Engineer</title>
-</head>
-<body>
-<div id="root"></div>
-<script type="module" src="/src/main.jsx"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="canonical" href="https://sohaibmanah.netlify.app" />
+    <meta name="description" content="Katabe KL - Software Developer." />
+    <meta property="og:description" content="Katabe KL - Software Developer." />
+    <meta property="og:title" content="Katabe KL - Software Developer" />
+    <meta property="og:url" content="https://sohaibmanah.netlify.app" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Katabe KL - Software Developer" />
+    <meta property="og:image" content="./src/assets/images/Hero/person.png" />
+    <meta name="keywords" content=" Katabe KL - Software Developer" />
+    <title>Katabe KL - Software Developer</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
