last today update

--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/logo.jpeg" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="canonical" href="https://sohaibmanah.netlify.app" />
     <meta name="description" content="Katabe KL - Software Developer." />
     <meta property="og:description" content="Katabe KL - Software Developer." />
     <meta property="og:title" content="Katabe KL - Software Developer" />
